# microservice/gateway/docs/swagger.json
@@ -77,6 +77,38 @@
                 }
             }
         },
+        "/auth/set_role/{id}": {
+            "post": {
+                "description": "前端无需接此接口，casbin只会在启动时读取一遍数据库，因此改权限不能直接修改数据库，故写一个接口",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "user"
+                ],
+                "summary": "设置权限",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token 用户令牌",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/Response"
+                        }
+                    }
+                }
+            }
+        },
         "/chat/history/{id}": {
             "get": {
                 "consumes": [
@@ -978,46 +1010,6 @@
                 }
             }
         },
-        "/ranking-list": {
-            "post": {
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "rankingList"
-                ],
-                "summary": "创建帖子 api",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "token 用户令牌",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "description": "create_ranking_list_request",
-                        "name": "object",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/rankingList.CreateRankingListRequest"
-                        }
-                    }
-                ],
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/rankingList.IdResponse"
-                        }
-                    }
-                }
-            }
-        },
         "/report": {
             "put": {
                 "consumes": [
@@ -1140,6 +1132,46 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/report.ListResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/sip-score": {
+            "post": {
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "sipscore"
+                ],
+                "summary": "创建榜单 api",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "token 用户令牌",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "description": "create_sip_score_request",
+                        "name": "object",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/sipscore.CreateSipScoreRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/sipscore.IdResponse"
                         }
                     }
                 }
@@ -1604,12 +1636,23 @@
         },
         "StudentLoginRequest": {
             "type": "object",
-            "required": [
-                "password",
-                "student_id"
-            ],
             "properties": {
+                "action": {
+                    "type": "string"
+                },
+                "captcha": {
+                    "type": "string"
+                },
                 "password": {
+                    "type": "string"
+                },
+                "second_auth_code": {
+                    "type": "string"
+                },
+                "second_auth_method": {
+                    "type": "string"
+                },
+                "session_id": {
                     "type": "string"
                 },
                 "student_id": {
@@ -1620,6 +1663,33 @@
         "StudentLoginResponse": {
             "type": "object",
             "properties": {
+                "available_second_auth_methods": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                },
+                "captcha_image_base64": {
+                    "type": "string"
+                },
+                "current_second_auth_method": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "second_auth_email_target": {
+                    "type": "string"
+                },
+                "second_auth_sms_target": {
+                    "type": "string"
+                },
+                "session_id": {
+                    "type": "string"
+                },
+                "status": {
+                    "type": "string"
+                },
                 "token": {
                     "type": "string"
                 }
@@ -2218,48 +2288,6 @@
                 }
             }
         },
-        "rankingList.CreateRankingListRequest": {
-            "type": "object",
-            "required": [
-                "category",
-                "cover_img",
-                "description",
-                "domain",
-                "name",
-                "tags"
-            ],
-            "properties": {
-                "category": {
-                    "type": "string"
-                },
-                "cover_img": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "domain": {
-                    "type": "string"
-                },
-                "name": {
-                    "type": "string"
-                },
-                "tags": {
-                    "type": "array",
-                    "items": {
-                        "type": "string"
-                    }
-                }
-            }
-        },
-        "rankingList.IdResponse": {
-            "type": "object",
-            "properties": {
-                "id": {
-                    "type": "integer"
-                }
-            }
-        },
         "report.CreateRequest": {
             "type": "object",
             "required": [
@@ -2353,6 +2381,48 @@
                 },
                 "user_name": {
                     "type": "string"
+                }
+            }
+        },
+        "sipscore.CreateSipScoreRequest": {
+            "type": "object",
+            "required": [
+                "category",
+                "cover_img",
+                "description",
+                "domain",
+                "name",
+                "tags"
+            ],
+            "properties": {
+                "category": {
+                    "type": "string"
+                },
+                "cover_img": {
+                    "type": "string"
+                },
+                "description": {
+                    "type": "string"
+                },
+                "domain": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "tags": {
+                    "type": "array",
+                    "items": {
+                        "type": "string"
+                    }
+                }
+            }
+        },
+        "sipscore.IdResponse": {
+            "type": "object",
+            "properties": {
+                "id": {
+                    "type": "integer"
                 }
             }
         },
